--- a/app/salesapp/webapp/i18n/i18n.properties
+++ b/app/salesapp/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Sales Order
+appTitle=Sales Order CI/CD
 
 #YDES: Application description
-appDescription=Sales Order application.
+appDescription=Sales Order application. CI/CD
 #XTIT: Main view title
-title=Sales Order
+title=Sales Order CI/CD
 
 flpTitle=Sales Order
